# bodge

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DESIGN.md  LICENSE.md  Makefile  README.md  REFACTOR.md  TODO.org  TUTORIAL.md  TUTORIAL.qmd  Taskfile.yml  _quarto.yml  altermagnet.csv  altermagnet.py  altermagnets.ipynb  altermagnets2.ipynb  altermagnets2.py  bench.csv  bench.py  bench2.csv  bench2.py  bench3.csv  bench3.py  bench4.csv  bench4.py  bench6.csv  bench_all.csv  bench_cheb.py  bench_eigd.py  bench_intel_cheb.csv  bench_intel_eigd.csv  benchmark.csv  benchmark2.csv  benchplot.py  binary_hopping.py  chebpols.csv  control.py  defect.py  defect0.py  (+86 more)
.github/workflows/: draft-pdf.yml  unit-tests.yml
benchmarks/: benchmarks.py
bodge/: __init__.py  chebyshev.py  common.py  consts.py  fermi.py  hamiltonian.py  kernel.jl  kernels.py  lattice.py  math.py  physics.py  solver.py  solver2.py  stdio.py  storage.py  system.py  typing.py  utils.py
docs/: TUTORIAL.html  _quarto.yml  index.html  plot.py  search.json  tutorial.html  tutorial.qmd
docs/_site/: search.json  tutorial.html
docs/_site/site_libs/bootstrap/: bootstrap.min.css
docs/site_libs/bootstrap/: bootstrap.min.css
examples/: benchmarking.py
misc/: benchmark.csv  benchmark.py
paper/: paper.md
pybdg/: __init__.py  consts.py  hamiltonian.py  lattice.py  solver.py  system.py  utils.py
tests/: test_common.py  test_consts.py  test_fermi.py  test_hamiltonian.py  test_lattice.py  test_math.py  test_physics.py  test_solver.py  test_system.py  test_utils.py
