[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bodge"
authors = [
    {name = "Jabir Ali Ouassou", email = "jabir.a.ouassou@ntnu.no"},
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "beartype",
    "multiprocess",
    "matplotlib",
    "seaborn",
    "tqdm",
    "icecream",
    "typer"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

format = [
    "isort",
    "black",
]

shell = [
    "ipython",
]

[tool.black]
line-length = 99

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:the imp module is deprecated:DeprecationWarning',
]

[tool.pyright]
python.venvPath = "."
python.venv = "venv"
