[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bodge"
authors = [
    {name = "Jabir Ali Ouassou", email = "jabir.ali.ouassou@hvl.no"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "description"]

dependencies = [
    "beartype",
    "numpy",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "quarto"
]

[tool.black]
line-length = 99

[tool.pytest.ini_options]
addopts = "--cov=bodge --cov-report term-missing"
filterwarnings = [
    'ignore:the imp module is deprecated:DeprecationWarning',
]

[tool.pyright]
python.venvPath = "."
python.venv = "venv"
