[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bodge"
authors = [
    {name = "Jabir Ali Ouassou", email = "jabir.ali.ouassou@hvl.no"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]
requires-python = ">=3.11"

dependencies = [
    "beartype",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "flit",
    "isort",
    "pytest",
    "pytest-cov",
    "quarto",
]
cuda = [
    "cupy",
]
all = [
    "black",
    "cupy",
    "flit",
    "isort",
    "pytest",
    "pytest-cov",
    "quarto",
]

[tool.black]
line-length = 99

[tool.pytest.ini_options]
addopts = "--cov=bodge --cov-report term-missing"
filterwarnings = [
    'ignore:the imp module is deprecated:DeprecationWarning',
]

[tool.pyright]
python.venvPath = "."
python.venv = "venv"
